Remoção arquivos desnecessários

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 </section>
 
 <main id="main">
-
     <!--==========================
       About Section
     ============================-->
@@ -258,8 +257,8 @@
 
         <div class="container">
             <div class="section-header">
-                <h2>Gallery</h2>
-                <p>Check our gallery from the recent events</p>
+                <h2>Galeria</h2>
+                <p>Confira algumas fotos de happy hours científicos anteriores!</p>
             </div>
         </div>
 
@@ -295,55 +294,31 @@
             </div>
 
             <div class="row no-gutters supporters-wrap clearfix">
-
-                <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/1.png" class="img-fluid" alt="">
+                        <img src="img/supporters/beertap.png" href="https://www.instagram.com/beertapslz/" height="687" width="875" class="img-fluid"
+                             alt="Beer Tap Cultura Cervejeira">
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/2.png" class="img-fluid" alt="">
+                        <img src="img/supporters/sama.png" height="294" width="120" class="img-fluid"
+                             alt="Sama - Sociedade de Astronomia do Maranhão">
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/3.png" class="img-fluid" alt="">
+                        <img src="img/supporters/beercave.png" width="800" class="img-fluid" alt="Beer Cave Empório">
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/4.png" class="img-fluid" alt="">
+                        <img src="img/supporters/engcomp.png" class="img-fluid" alt="Engenharia de Computação - Uema">
                     </div>
                 </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="img/supporters/5.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="img/supporters/6.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="img/supporters/7.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="img/supporters/8.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-
             </div>
 
         </div>
@@ -354,20 +329,18 @@
       F.A.Q Section
     ============================-->
     <section id="faq" class="wow fadeInUp">
-
         <div class="container">
-
             <div class="section-header">
                 <h2>F.A.Q </h2>
             </div>
-
             <div class="row justify-content-center">
                 <div class="col-lg-9">
                     <ul id="faq-list">
 
                         <li>
-                            <a data-toggle="collapse" class="collapsed" href="#faq1">Non consectetur a erat nam at
-                                lectus urna duis? <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" class="collapsed" href="#faq1">
+                                Como funciona o evento ?
+                                <i class="fa fa-minus-circle"></i></a>
                             <div id="faq1" class="collapse" data-parent="#faq-list">
                                 <p>
                                     Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet
@@ -378,8 +351,9 @@
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq2" class="collapsed">Feugiat scelerisque varius morbi
-                                enim nunc faucibus a pellentesque? <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq2" class="collapsed">
+                                Eu preciso pagar ingresso, ticket ou entrada ?
+                                <i class="fa fa-minus-circle"></i></a>
                             <div id="faq2" class="collapse" data-parent="#faq-list">
                                 <p>
                                     Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum
@@ -391,8 +365,9 @@
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq3" class="collapsed">Dolor sit amet consectetur
-                                adipiscing elit pellentesque habitant morbi? <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq3" class="collapsed">
+                                Como ficar sabendo das próximas edições ?
+                                <i class="fa fa-minus-circle"></i></a>
                             <div id="faq3" class="collapse" data-parent="#faq-list">
                                 <p>
                                     Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus
@@ -404,8 +379,9 @@
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq4" class="collapsed">Ac odio tempor orci dapibus.
-                                Aliquam eleifend mi in nulla? <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq4" class="collapsed">
+                                Quero uma edição na minha cidade. O que eu preciso fazer ?
+                                <i class="fa fa-minus-circle"></i></a>
                             <div id="faq4" class="collapse" data-parent="#faq-list">
                                 <p>
                                     Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum
@@ -415,33 +391,6 @@
                                 </p>
                             </div>
                         </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq5" class="collapsed">Tempus quam pellentesque nec nam
-                                aliquam sem et tortor consequat? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq5" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in
-                                    est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl
-                                    suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq6" class="collapsed">Tortor vitae purus faucibus ornare.
-                                Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq6" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo
-                                    integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc
-                                    eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
-                                    Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus.
-                                    Nibh tellus molestie nunc non blandit massa enim nec.
-                                </p>
-                            </div>
-                        </li>
-
                     </ul>
                 </div>
             </div>
@@ -456,72 +405,31 @@
         <div class="container">
 
             <div class="section-header">
-                <h2>Contact Us</h2>
-                <p>Nihil officia ut sint molestiae tenetur.</p>
+                <h2>Entre em contato</h2>
+                <p>E nos convide para um chopp algum dia ;)</p>
             </div>
 
             <div class="row contact-info">
-
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="contact-address">
-                        <i class="ion-ios-location-outline"></i>
-                        <h3>Address</h3>
-                        <address>A108 Adam Street, NY 535022, USA</address>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="contact-phone">
                         <i class="ion-ios-telephone-outline"></i>
-                        <h3>Phone Number</h3>
-                        <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                        <h3>Telefone/Whatsapp</h3>
+                        <p><a href="tel:+5598985008716">(98) 98500-8716</a></p>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="contact-email">
                         <i class="ion-ios-email-outline"></i>
                         <h3>Email</h3>
-                        <p><a href="mailto:info@example.com">info@example.com</a></p>
+                        <p><a href="mailto:info@example.com">sciencepubma@gmail.com</a></p>
                     </div>
                 </div>
 
             </div>
-
-            <div class="form">
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-                <form action="" method="post" role="form" class="contactForm">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                                   data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                                   data-rule="email" data-msg="Please enter a valid email"/>
-                            <div class="validation"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                               data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"/>
-                        <div class="validation"></div>
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" name="message" rows="5" data-rule="required"
-                                  data-msg="Please write something for us" placeholder="Message"></textarea>
-                        <div class="validation"></div>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit">Send Message</button>
-                    </div>
-                </form>
-            </div>
-
         </div>
-    </section><!-- #contact -->
+    </section>
+    <!-- #contact -->
 
 </main>
 
@@ -535,11 +443,10 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 text-center footer-contact">
                     <div class="social-links">
-                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                        <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://twitter.com/sciencepubbr" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/sciencepubbr/" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/sciencepubbr/" class="instagram"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
 
                 </div>
@@ -550,7 +457,7 @@
 
     <div class="container">
         <div class="copyright">
-            &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+            &copy; <strong>SciencePub</strong>. Todos os direitos reservados
         </div>
         <div class="credits">
             <!--
