--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                 <li><a href="#about">Sobre o evento</a></li>
                 <li><a href="#schedule">Edições</a></li>
                 <li><a href="#venue">Local</a></li>
-                <li><a href="#gallery">Imagens</a></li>
+                <li><a href="#gallery">Galeria</a></li>
                 <li><a href="#supporters">Parceiros</a></li>
-                <li><a href="#contact">Contatos</a></li>
+                <li><a href="#faq">Perguntas frequentes</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
         </nav><!-- #nav-menu-container -->
     </div>
@@ -69,8 +70,9 @@
 ============================-->
 <section id="intro">
     <div class="intro-container wow fadeIn">
-        <h1 class="mb-4 pb-0" style="font-family: 'Aller Light'">Seu pub mensal sobre
+        <h1 class="mb-4 pb-0" style="font-family: 'Aller Display'">Seu pub mensal sobre
             <br><span>ciência e tecnologia</span></h1>
+        <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>10/08</strong> em <strong>Beer Tap</strong>, São Luís - Maranhão</h3>
         <a href="https://www.youtube.com/watch?v=pYeqKmb3WLE" class="venobox play-btn mb-4" data-vbtype="video"
            data-autoplay="true"></a>
         <a href="#about" class="about-btn scrollto">Descubra mais</a>
@@ -154,107 +156,46 @@
         <div class="container-fluid">
 
             <div class="section-header">
-                <h2>Event Venue</h2>
-                <p>Event venue location info and gallery</p>
+                <h2>Local</h2>
+                <p>Locais que recebem o SciencePub</p>
             </div>
 
             <div class="row no-gutters">
                 <div class="col-lg-6 venue-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.01234152037!2d-44.31458748524408!3d-2.5028151981762403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68c1c82a4c553%3A0xa120964fddcb6aae!2sBeer+Tap+-+Cultura+Cervejeira!5e0!3m2!1spt-BR!2sbr!4v1564606157365!5m2!1spt-BR!2sbr"
+                            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
-
-                <div class="col-lg-6 venue-info">
+                <div class="col-lg-6 venue-info venue-slz">
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8">
-                            <h3>Downtown Conference Center, New York</h3>
-                            <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam.
-                                Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur
-                                sequi et ea suscipit enim nesciunt quia velit.</p>
+                            <h3>São Luís, Maranhão</h3>
+                            <p>Cultura cervejeira e 14 torneiras de chopp artesanal</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="container-fluid venue-gallery-container">
+            <br>
             <div class="row no-gutters">
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/1.jpg" alt="" class="img-fluid">
-                        </a>
+                <div class="col-lg-6 venue-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.0320312594104!2d-48.52137428553332!3d-27.59253652854299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527385624f6b255%3A0xbcb86064a29cc225!2sRestaurante+Bendita+Gula!5e0!3m2!1spt-BR!2sbr!4v1564606530985!5m2!1spt-BR!2sbr"
+                            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-6 venue-info venue-fln">
+                    <div class="row justify-content-center">
+                        <div class="col-11 col-lg-8">
+                            <h3>Florianópolis, Santa Catarina</h3>
+                            <p>Servindo você com amor</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/2.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/3.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/4.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/4.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/5.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/5.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/6.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/7.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/7.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="img/venue-gallery/8.jpg" class="venobox" data-gall="venue-gallery">
-                            <img src="img/venue-gallery/8.jpg" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
             </div>
         </div>
-
     </section>
 
     <!--==========================
       Gallery Section
     ============================-->
     <section id="gallery" class="wow fadeInUp">
-
         <div class="container">
             <div class="section-header">
                 <h2>Galeria</h2>
@@ -263,22 +204,27 @@
         </div>
 
         <div class="owl-carousel gallery-carousel">
-            <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/2.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/3.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/4.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7.jpg"
-                                                                                          alt=""></a>
-            <a href="img/gallery/8.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8.jpg"
-                                                                                          alt=""></a>
+            <a href="img/gallery/pic01.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic01.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic02.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic02.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic03.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic03.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic04.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic04.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic05.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic05.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic06.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic06.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic07.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic07.jpg"
+                    alt=""></a>
         </div>
 
     </section>
@@ -296,7 +242,8 @@
             <div class="row no-gutters supporters-wrap clearfix">
                 <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/beertap.png" href="https://www.instagram.com/beertapslz/" height="687" width="875" class="img-fluid"
+                        <img src="img/supporters/beertap.png" href="https://www.instagram.com/beertapslz/" height="687"
+                             width="875" class="img-fluid"
                              alt="Beer Tap Cultura Cervejeira">
                     </div>
                 </div>
@@ -331,7 +278,7 @@
     <section id="faq" class="wow fadeInUp">
         <div class="container">
             <div class="section-header">
-                <h2>F.A.Q </h2>
+                <h2>Perguntas frequentes</h2>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-9">
@@ -422,7 +369,7 @@
                     <div class="contact-email">
                         <i class="ion-ios-email-outline"></i>
                         <h3>Email</h3>
-                        <p><a href="mailto:info@example.com">sciencepubma@gmail.com</a></p>
+                        <p><a href="mailto:sciencepubma@gmail.com">sciencepubma@gmail.com</a></p>
                     </div>
                 </div>
 
@@ -430,7 +377,6 @@
         </div>
     </section>
     <!-- #contact -->
-
 </main>
 
 
@@ -447,10 +393,10 @@
                         <a href="https://www.facebook.com/sciencepubbr/" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/sciencepubbr/" class="instagram"><i
                                 class="fa fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UCYVOOYb5aMCGmwOv6GcyedA" class="youtube"><i
+                                class="fa fa-youtube"></i></a>
                     </div>
-
                 </div>
-
             </div>
         </div>
     </div>
@@ -494,6 +440,8 @@
 <script type="application/javascript">
     function buildScheduleItens(events) {
         var html = '';
+
+        events.reverse();
 
         events.forEach(function (edition) {
             var speakers = '';
