Remoção flag desenvolvimento

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>[EM DESENVOLVIMENTO]SciencePub</title>
+    <title>SciencePub</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="science,beer" name="keywords">
+    <meta content="Ciência além da universidade" name="description">
 
     <!-- Favicons -->
     <link href="img/favicon.png" rel="icon">
