--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     <div class="intro-container wow fadeIn">
         <h1 class="mb-4 pb-0" style="font-family: 'Aller Display'">Seu pub mensal sobre
             <br><span>ciência e tecnologia</span></h1>
-        <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>10/08</strong> em <strong>Beer Tap</strong>, São Luís - Maranhão</h3>
+        <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>10/08</strong> em <strong>Beer
+            Tap</strong>, São Luís - Maranhão</h3>
         <a href="https://www.youtube.com/watch?v=pYeqKmb3WLE" class="venobox play-btn mb-4" data-vbtype="video"
            data-autoplay="true"></a>
         <a href="#about" class="about-btn scrollto">Descubra mais</a>
@@ -242,28 +243,54 @@
             <div class="row no-gutters supporters-wrap clearfix">
                 <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/beertap.png" href="https://www.instagram.com/beertapslz/" height="687"
-                             width="875" class="img-fluid"
+                        <img src="img/supporters/beertap.png" href="https://www.instagram.com/beertapslz/" height="175"
                              alt="Beer Tap Cultura Cervejeira">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/sama.png" height="294" width="120" class="img-fluid"
+                        <img src="img/supporters/sama.png" width="100"
                              alt="Sama - Sociedade de Astronomia do Maranhão">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/beercave.png" width="800" class="img-fluid" alt="Beer Cave Empório">
+                        <img src="img/supporters/beercave.png" width="175" alt="Beer Cave Empório">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/engcomp.png" class="img-fluid" alt="Engenharia de Computação - Uema">
+                        <img src="img/supporters/engcomp.png" width="250" alt="Engenharia de Computação - Uema">
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                    <div class="supporter-logo">
+                        <img src="img/supporters/houseofcups.png" height="175"
+                             alt="House of Cups">
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                    <div class="supporter-logo">
+                        <img src="img/supporters/phpma.png" height="125"
+                             alt="PHP Maranhão">
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                    <div class="supporter-logo">
+                        <img src="img/supporters/pug.png" height="150"
+                             alt="Python User Group - Maranhão">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                    <div class="supporter-logo">
+                        <img src="img/supporters/lncc.png" height="125"
+                             alt="Liga Nacional de Comunicação Científica">
                     </div>
                 </div>
             </div>
