--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
     <!--    <link href="css/custom.css" rel="stylesheet">-->
-
-    <!-- =======================================================
-      Theme Name: TheEvent
-      Theme URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-      Author: BootstrapMade.com
-      License: https://bootstrapmade.com/license/
-    ======================================================= -->
 </head>
 
 <body>
@@ -44,12 +37,10 @@
 ============================-->
 <header id="header">
     <div class="container">
-
         <div id="logo" class="pull-left">
             <!-- Uncomment below if you prefer to use a text logo -->
-            <a href="#intro" class="scrollto"><img src="img/logo2.png" alt="" title=""></a>
+            <a href="#intro" class="scrollto"><img src="img/logo.png" height="55" title=""></a>
         </div>
-
         <nav id="nav-menu-container">
             <ul class="nav-menu" style="font-family: 'Aller Light',serif">
                 <li class="menu-active"><a href="#intro">Início</a></li>
@@ -70,6 +61,11 @@
 ============================-->
 <section id="intro">
     <div class="intro-container wow fadeIn">
+        <div id="logo-intro" class="center">
+            <!-- Uncomment below if you prefer to use a text logo -->
+            <a href="#intro" class="scrollto"><img src="img/identity/Science-LogoVertical-ComContorno.png" height="500"
+                                                   title=""></a>
+        </div>
         <h1 class="mb-4 pb-0" style="font-family: 'Aller Display'">Seu pub mensal sobre
             <br><span>ciência e tecnologia</span></h1>
         <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>10/08</strong> em <strong>Beer
@@ -289,8 +285,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                     <div class="supporter-logo">
-                        <img src="img/supporters/lncc.png" height="125"
-                             alt="Liga Nacional de Comunicação Científica">
+                        <img src="img/supporters/benditagula.png" height="125"
+                             alt="Bendita Gula">
                     </div>
                 </div>
             </div>
