--- a/index.html
+++ b/index.html
@@ -418,6 +418,8 @@
                                 class="fa fa-instagram"></i></a>
                         <a href="https://www.youtube.com/channel/UCYVOOYb5aMCGmwOv6GcyedA" class="youtube"><i
                                 class="fa fa-youtube"></i></a>
+                        <a href="https://github.com/sciencepub" class="github"><i
+                                class="fa fa-github"></i></a>
                     </div>
                 </div>
             </div>
