Revisão fotos de palestrantes

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     ============================-->
     <section id="about">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
+            <div class="row text-center">
+                <div class="col-lg-12">
                     <h2>Sobre o evento</h2>
                     <p>A proposta do evento é discutir e divulgar ciência de uma maneira mais descontraída e acessível
                         ao público.
@@ -93,17 +93,19 @@
                         público leigo.
                         O evento não tem qualquer finalidade de trazer lucro aos organizadores.</p>
                 </div>
-                <div class="col-lg-2">
-                    <h3 id="spEditions"></h3>
-                    <p>Edições</p>
+            </div>
+            <div class="row text-center">
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <h2 style="color: #ffffff" id="spEditions"></h2>
+                    <h3 style="font-family: 'Aller Light'">Edições</h3>
                 </div>
-                <div class="col-lg-2">
-                    <h3 id="spCities"></h3>
-                    <p>Cidades</p>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <h2 style="color: #ffffff" id="spCities"></h2>
+                    <h3 style="font-family: 'Aller Light'">Cidades</h3>
                 </div>
-                <div class="col-lg-2">
-                    <h3 id="spStates"></h3>
-                    <p>Estados</p>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <h2 style="color: #ffffff" id="spStates"></h2>
+                    <h3 style="font-family: 'Aller Light'">Estados</h3>
                 </div>
             </div>
         </div>
