--- a/index.html
+++ b/index.html
@@ -308,16 +308,16 @@
             <div class="row justify-content-center">
                 <div class="col-lg-9">
                     <ul id="faq-list">
-
                         <li>
                             <a data-toggle="collapse" class="collapsed" href="#faq1">
                                 Como funciona o evento ?
                                 <i class="fa fa-minus-circle"></i></a>
                             <div id="faq1" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet
-                                    non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor
-                                    purus non.
+                                    A cada mês trazemos dois cientistas ou pessoas envolvidas com ciência para uma
+                                    palestra bem divertida no bar.
+                                    Isso mesmo! Ciência acompanhada de cerveja uma vez por mês. As palestras duram de 20
+                                    a 30 minutos e o público pode interagir com os palestrantes.
                                 </p>
                             </div>
                         </li>
@@ -328,10 +328,11 @@
                                 <i class="fa fa-minus-circle"></i></a>
                             <div id="faq2" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum
-                                    velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend
-                                    donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
-                                    cursus turpis massa tincidunt dui.
+                                    De forma alguma! TODAS as edições do SciencePub são gratuitas e abertas ao público
+                                    sem custo algum para o participante.
+                                    Você só paga o que consumir no local (o que encorajamos a fazer pagando um chopp
+                                    para os organizadores).
+                                    No SciencePub pode chegar que a mesa é sua!
                                 </p>
                             </div>
                         </li>
@@ -342,10 +343,20 @@
                                 <i class="fa fa-minus-circle"></i></a>
                             <div id="faq3" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus
-                                    pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit.
-                                    Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis
-                                    tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                                    Fique atento às nossas redes sociais e nosso site. Nos acompanhe pelo <a
+                                        href="https://www.instagram.com/sciencepubbr/" class="txt-link"
+                                        style="display: inline; padding-right: 0;">Instagram</a>,
+                                    <a href="https://twitter.com/sciencepubbr/" class="txt-link"
+                                       style="display: inline; padding-right: 0;">Twitter</a>
+                                    e
+                                    <a href="https://www.facebook.com/sciencepubbr/"
+                                       class="txt-link"
+                                       style="display: inline; padding-right: 0;">Facebook</a>.
+                                    Há também um grupo no <a href="https://t.me/sciencepubbr" class="txt-link"
+                                                             style="display: inline; padding-right: 0;">Telegram</a>
+                                    para os cervejeiros que curtem
+                                    ciência onde são divulgadas as novidades do evento
+                                    e a discussão sobre ciência e assuntos afins continua após o happy hour.
                                 </p>
                             </div>
                         </li>
@@ -356,10 +367,8 @@
                                 <i class="fa fa-minus-circle"></i></a>
                             <div id="faq4" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum
-                                    velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend
-                                    donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
-                                    cursus turpis massa tincidunt dui.
+                                    Queremos levar a ciência para cada vez mais pessoas! Vai ser uma honra levar o happy hour científico para a sua cidade!
+                                    Entre em contato com a gente por telefone, mensagem ou email e iremos auxiliar você na organização do SciencePub na sua cidade.
                                 </p>
                             </div>
                         </li>
