Imagens da galeria e favicons

--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
     <meta content="Ciência além da universidade" name="description">
 
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
@@ -27,7 +42,6 @@
 
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
-    <!--    <link href="css/custom.css" rel="stylesheet">-->
 </head>
 
 <body>
@@ -223,6 +237,15 @@
                     alt=""></a>
             <a href="img/gallery/pic07.jpg" class="venobox" data-gall="gallery-carousel"><img
                     src="img/gallery/pic07.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic08.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic08.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic09.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic09.jpg"
+                    alt=""></a>
+            <a href="img/gallery/pic10.jpg" class="venobox" data-gall="gallery-carousel"><img
+                    src="img/gallery/pic10.jpg"
                     alt=""></a>
         </div>
 
@@ -604,7 +627,6 @@
                 .map(c => c.editions)
                 .reduce((c, e) => c + e, 0);
             citiesElement.innerHTML = json.cities.length;
-
             statesElement.innerHTML = [...new Set(json.cities.map(c => c.state))].length;
 
             // Current Year editions
